Updated to recive large data Chunked and better handeling of Errors